# Toshy

./: .coveragerc  .gitignore  CLAUDE.md  NIXOS_GNOME_WM_DETECTION.md  NIXOS_QUICKSTART.md  README.md  README_APPLY_capslock_mode.md  flake.nix  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result  ruff.toml  setup_toshy.py  toshy_tray.py
.github/workflows/: nixos-tests.yml
.kiro/specs/toshy-nix-flake/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project-context.md
cosmic-dbus-service/: toshy_cosmic_dbus_service.py
default-toshy-config/: tosh_config.py  toshy_config.py  toshy_config_barebones.py
docs/: nixos-gnome-wm-detection-issue.md
examples/: basic-nixos-config.nix  home-manager-config.nix
home-manager/: toshy.nix
kwin-dbus-service/: toshy_kwin_dbus_service.py
modules/: toshy.nix
nix/: README.md  hyprpy.nix  python-overlay.nix  xwaykeyz.nix
nix/examples/: flake-example.nix  home-manager-advanced.nix  home-manager-basic.nix  nixos-configuration.nix
nix/modules/: home-manager.nix  nixos.nix
nix/tests/: Makefile  README.md  autostart.nix  basic.nix  config-custom.nix  dbus-cosmic.nix  dbus-kwin.nix  dbus-wlroots.nix  de-override.nix  e2e-installation.nix  error-handling.nix  home-manager.nix  integration.nix  multi-de.nix  multi-user.nix  rollback.nix  run-tests.sh  setup-cli-integration.nix  verbose-logging.nix
nix/tests/fixtures/: test-config.py
scripts/: bootstrap.sh  release-prep.sh  set-mac-startup-sound-volume.sh  sync_vendors.sh  toshy-bincommands-remove.sh  toshy-bincommands-setup.sh  toshy-desktopapps-setup.sh  toshy-nixos-helper.sh  toshy-perf-test.sh  toshy-sway-layout-test.sh  toshy-wlroots-kblayout-test.sh  toshy_versions.py  tshysvc-config  tshysvc-sessmon
tests/: README.md  __init__.py  conftest.py  modmap_matrix_report.py  modmap_verifier_harness.py  modmap_verifier_rgx.py  test_modmap_hygiene.py  test_modmap_integrity.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_env_context_nixos.py  test_nix_desktop_files.py  test_nixos_edge_cases.py  test_nixos_module_warnings.py  test_nixos_package_integrity.py  test_setup_nixos.py  test_toshy_config_gnome_wayland.py
toshy_common/: env_context.py  kblayout_analyze.py  kblayout_common.py  kblayout_context copy.py  kblayout_context.py  kblayout_detect.py  kblayout_detect_DEPRECATED.py  kblayout_setup.py  kblayout_symtable.py  keycheck.py  keycheck_rgx.py  modifier_modes.py  monitoring.py  notification_manager.py  overlay_context.py  proc_launcher.py  process_manager.py  runtime_utils.py  service_manager.py  settings_class.py  terminal_utils.py
toshy_common/kblayout_detect/: __init__.py  __main__.py  kbld_backend_base.py  kbld_backend_cinnamon.py  kbld_backend_cosmic.py  kbld_backend_gnome.py  kbld_backend_kde.py  kbld_backend_wl_generic.py  kbld_backend_x11.py  kbld_registry.py
toshy_gui/: main_gtk4.py  main_tkinter.py
toshy_gui/gui/: app_css.py  bottom_panel_gtk4.py  overlays_dialog_gtk4.py  service_panel_gtk4.py  settings_panel_gtk4.py  tools_panel.py
vendors/kwin-application-switcher/: .vendored-ref  install.sh  uninstall.sh
vendors/kwin-application-switcher/contents/code/: main.js
vendors/xwaykeyz-dev_beta/: .vendored-ref
vendors/xwaykeyz-dev_beta/src/xwaykeyz/: config_api.py  pointer_monitor.py  transform.py  version.py
vendors/xwaykeyz-main/: .vendored-ref
vendors/xwaykeyz-main/src/xwaykeyz/: config_api.py  input.py  transform.py  version.py
vendors/xwaykeyz-main/src/xwaykeyz/models/: multitap.py  timeout_rule.py
wlroots-dbus-service/: toshy_wlroots_dbus_service.py
