[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toshy"
version = "2025.04.16"
description = "Mac-style keyboard remapping for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "RedBearAK"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "appdirs",
    "dbus-python",
    "evdev",
    "hyprpy",
    "i3ipc",
    "inotify-simple",
    "lockfile",
    "ordered-set",
    "pillow",
    "psutil",
    "pygobject",
    "pywayland",
    "six",
    "systemd-python",
    "watchdog",
    # Pinned: python-xlib 0.32+ has BadRRModeError bug
    # https://github.com/python-xlib/python-xlib/issues
    "python-xlib==0.31",
    # Pinned: xkbcommon 1.1+ introduced breaking API changes
    # https://github.com/sde1000/python-xkbcommon/issues/23
    "xkbcommon<1.1",
    "xwaykeyz>=1.12.0",
]

[project.optional-dependencies]
gui-tk = [
    "sv-ttk",
]

[project.urls]
Homepage = "https://github.com/RedBearAK/toshy"
Repository = "https://github.com/RedBearAK/toshy.git"
Issues = "https://github.com/RedBearAK/toshy/issues"

[project.scripts]
toshy-tray = "toshy_tray:main"
toshy-gui = "toshy_gui.__main__:main"
toshy-layout-selector = "toshy_layout_selector:main"

# ---------------------------------------------------------------------------
# Python packages and modules
# ---------------------------------------------------------------------------
[tool.setuptools]
py-modules = ["toshy_tray", "toshy_layout_selector"]

[tool.setuptools.packages.find]
where = ["."]
include = ["toshy_common*", "toshy_gui*"]

# ---------------------------------------------------------------------------
# Package data — non-Python files shipped inside Python packages.
#
# The glob patterns below cover files that live inside the discovered Python
# packages (toshy_common, toshy_gui, and their sub-packages).  Any new files
# added to these packages by the maintainer are picked up automatically.
# ---------------------------------------------------------------------------
[tool.setuptools.package-data]
"toshy_gui" = [
    "resources/**/*",
]

# ---------------------------------------------------------------------------
# Non-package data directories
#
# The directories below live at the repository root and are NOT inside a
# Python package.  setuptools package-data cannot install them because they
# lack __init__.py.  They are listed here for documentation purposes and
# are installed by:
#   - The upstream installer script  (setup_toshy.py)  for venv installs
#   - The Nix derivation postInstall phase              for Nix builds
#
# Directories and their contents:
#   default-toshy-config/   — default toshy_config.py and barebones variant
#   scripts/                — shell helper scripts (tshysvc-config, tshysvc-sessmon, bin/*)
#   assets/                 — icons and Toshy-Icon-Theme
#   desktop/                — .desktop launcher files
#   systemd-user-service-units/ — reference systemd user service files
#   kwin-dbus-service/      — KWin D-Bus service script and bus config
#   wlroots-dbus-service/   — wlroots D-Bus service script and Wayland protocols
#   cosmic-dbus-service/    — COSMIC D-Bus service script and Wayland protocols
#   kwin-script/            — KWin window-notify scripts (KDE 5 / KDE 6)
# ---------------------------------------------------------------------------
